[package]
name = "syncoor"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sync-v2-pools"
path = "example/sync_univ2_pools.rs"

[dependencies]
alloy-rpc-types = "1.0.16"
alloy-provider = {version = "1.0.16", features = ["pubsub", "ws"] }
alloy-primitives = "1.2.1"
alloy-sol-types = "1.2.1"
tokio = { version = "1.45.1", features = ["full"] }
anyhow = "1.0.98"
futures-util = "0.3.31"
evm-abi = { git = "https://github.com/Zacholme7/evm-abi" }
