[package]
name = "syncoor"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sync-v2-pools"
path = "example/sync_univ2_pools.rs"

[dependencies]
alloy-rpc-types = "1.0.27"
alloy-provider = {version = "1.0.27", features = ["pubsub", "ws", "reqwest"] }
alloy-primitives = "1.3.1"
alloy-sol-types = "1.3.1"
tokio = { version = "1.47.1", features = ["full"] }
anyhow = "1.0.99"
futures-util = "0.3.31"
evm-abi = { git = "https://github.com/Zacholme7/evm-abi" }
reqwest = "0.12.23"
