[package]
name = "syncoor"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sync-v2-pools"
path = "example/sync_univ2_pools.rs"

[dependencies]
alloy-rpc-types = "1.1.3"
alloy-provider = {version = "1.1.3", features = ["pubsub", "ws", "reqwest"] }
alloy-primitives = "1.5.1"
alloy-sol-types = "1.5.1"
tokio = { version = "1.48.0", features = ["full"] }
thiserror = "2.0.9"
futures-util = "0.3.31"
evm-abi = { git = "https://github.com/Zacholme7/evm-abi" }
reqwest = "0.12.23"
url = "2.5"
